# valis

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: ci.yml  deploy-railway.yml
apps/web/: package-lock.json  package.json  railway.json
apps/web/app/: dubai-demo.tsx  globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts
docs/: 01-data-schema.md  02-korea-adapter.md  03-avm-model.md  04-backtest-methodology.md  05-sui-contracts.md  06-uae-expansion.md  07-sukuk-integration.md  08-dubai-demo.md  whitepaper_v1_draft.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: evaluate_v4.py  ingest_dld.py  ingest_fx.py  ingest_kongsi.py  ingest_molit.py  ingest_seum.py  issue_attestations.py  issue_attestations_ae.py  run_backtest.py  seed_seoul_legal_codes.py  seed_seoul_pois.py  smoke_molit.py  train_avm.py  train_avm_ae.py
tests/: conftest.py  test_address.py  test_ae_normalizer.py  test_avm_v0.py  test_backtest_runner.py  test_confidence.py  test_conformal.py  test_features.py  test_fx.py  test_ids.py  test_kongsi.py  test_metrics.py  test_models_train.py  test_molit_parser.py  test_money.py  test_normalizer.py  test_registry.py  test_seum.py  test_splits.py  test_v3_index.py
tests/fixtures/molit/: apt_trade_11680_202401.xml  apt_trade_cancelled.xml  apt_trade_error.xml  apt_trade_malformed.xml
tests/fixtures/seum/: title_info_error.xml  title_info_normal.xml
