[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "valis"
version = "0.1.0"
description = "On-chain real estate valuation infrastructure"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "geoalchemy2>=0.15",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "tenacity>=8.3",
    "python-multipart>=0.0.9",
    "lxml>=5.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "structlog>=24.1",
    "sentry-sdk>=2.5",
    "apscheduler>=3.10",
    "boto3>=1.34",
    "pysui>=0.75",
    "tabulate>=0.9",
    "pyarrow>=16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-lxml>=2024.4",
    "ipython>=8.25",
    "jupyter>=1.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",
]
prod = []

[tool.setuptools.packages.find]
include = ["packages*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
# E501: long lines; RUF002/003: Korean docs quote full-width/ambiguous unicode
ignore = ["E501", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"packages/api/**" = ["B008"]      # FastAPI Depends() in defaults is idiomatic
"packages/avm/**" = ["N806"]      # X/y naming is ML convention
"scripts/**" = ["N806"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["packages/core", "packages/avm"]
# pandas/numpy return Any pervasively and ML glue uses bare containers;
# the remaining strict checks (untyped defs, optionals, overrides) stay on
warn_return_any = false
disallow_any_generics = false

# pandas/scipy/sklearn stay untyped (Any) — their stubs fight idiomatic ML
# code; our own annotations remain fully enforced by strict mode
[[tool.mypy.overrides]]
module = ["pandas.*", "sklearn.*", "lightgbm.*", "scipy.*", "pysui.*", "geoalchemy2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["packages"]
# PRD §4.3: ≥70% on CORE paths (normalize, AVM predict, attestation logic).
# Live-network glue and serving wiring are exercised by smoke/integration
# runs, not unit tests — excluded from the unit-coverage gate.
omit = [
    "*/tests/*",
    "*/__init__.py",
    "packages/api/*",
    "packages/attestation/*",
    "packages/core/db/*",
    "packages/adapter_kr/*/client.py",
    "packages/adapter_kr/fx/ecos_client.py",
]
